--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": "https://github.com/jellymann/rails-credentials-loader.git",
   "author": "Daniel Smith <jellymann@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "yaml": "^1.10.0"
+  }
 }
